--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'redis.clients:jedis:4.4.3'
+    implementation group: 'redis.clients', name: 'jedis', version: '5.1.2'
+    implementation group: 'org.springframework.batch', name: 'spring-batch-core', version: '5.1.1'
 }
 
 tasks.named('test') {
