--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,27 @@
 services:
+  app:
+    build:
+      context: /
+      dockerfile: Dockerfile
+    ports:
+      - 8080:8080
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/puzzle_app
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: 1234
+      REDIS_HOST: session
   db:
     image: postgres
     environment:
-      - POSTGRES_USER=test
-      - POSTGRES_DB=puzzle_test_db
-      - POSTGRES_PASSWORD=1234
-    ports:
-      - 5432
+      POSTGRES_PASSWORD: 1234
+      POSTGRES_DB: puzzle_app
+      POSTGRES_USER: postgres
+    volumes:
+      - puzzleapp:/var/lib/postgresql/data
+  session:
+    image: redis
+    volumes:
+      - session:/data
+volumes:
+  puzzleapp:
+  session:
